# Energy

./: .gitignore  LICENSE  Makefile  README.md  REPO_MANIFEST.json  index.html  pyproject.toml  requirements.txt
.github/workflows/: bio-digital-ci-cd.yml  pages.yml
.virtual_documents/notebooks/: DaScient_DataCenter_Interop_EnergyCrisis_Notebook.ipynb  DaScient_DeepGenAI_Analytics_OpenSource_Metrics_Package.ipynb  DaScient_Multidimensional_Visual_Ops_Package.ipynb  DaScient_Weather_News_Energy_DataCenter_Planning.ipynb
Code/: ARES_E_Harness.py  EWIS_Physics_Informed_Grid.py  PHIAK_Privacy_Infrastructure.py  WOIK_Water_Energy_Nexus.py
dascient_suite/energy/: weather_to_energy.py
dascient_suite/weather/: open_meteo.py
data/sample/: schemas.json
docs/: METRICS_GLOSSARY.md  PLAYBOOKS.md  PRODUCTIONIZATION.md  README.md
docs/architecture/: living_data_centers.md
docs/ethics/: donor_rights_policy.md
docs/future_architectures/: gemini_multimodal_integration.md  semantic_stimulus_encoder.py
ewis-toolkit/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  spec.md
ewis-toolkit/.github/workflows/: ci.yml
ewis-toolkit/docs/: architecture.md  cli.md  index.md  metrics.md
ewis-toolkit/ewis/: __init__.py  cli.py  report.py
ewis-toolkit/ewis/core/: context.py  engine.py  errors.py  payloads.py  plugin_manager.py
ewis-toolkit/ewis/metrics/: core.py
ewis-toolkit/ewis/plugins/builtin/: cooling_optimizer.py  weather_rss.py
ewis-toolkit/examples/: README.md
ewis-toolkit/examples/configs/: minimal.yml
ewis-toolkit/notebooks/: 01_grid_stress_eda.ipynb  02_genai_metrics.ipynb  03_cooling_optimizer_demo.ipynb  04_engine_pipeline_walkthrough.ipynb  05_payload_validation_guide.ipynb  06_plugin_development_tutorial.ipynb  07_multi_datacenter_comparison.ipynb  README.md
ewis-toolkit/plugins/: README.md
ewis-toolkit/tests/: test_engine.py  test_metrics.py
hardware/3d_mesh_electrodes/: electrode_map_generator.rs  mesh_geometry_config.json
hardware/microfluidic_perfusion/: flow_dynamics_model.ipynb  pump_controller.py
hardware/optogenetic_interfaces/: opsin_calibration_tool.py  optical_stim_patterns.yaml
notebooks/: 01_organoid_growth_analytics.ipynb  01_quantum_state_routing.ipynb  02_existential_threat_modeling.py  02_reservoir_capacity_benchmarks.ipynb  03_preparedness_and_resource_allocation.ipynb  04_neural_interface_telemetry.ipynb  DaScient_DataCenter_Interop_EnergyCrisis_Notebook.ipynb  DaScient_Multidimensional_Visual_Ops_Package.ipynb  DaScient_Weather_News_Energy_DataCenter_Planning.ipynb
notebooks/.ipynb_checkpoints/: DaScient_DataCenter_Interop_EnergyCrisis_Notebook-checkpoint.ipynb  DaScient_DeepGenAI_Analytics_OpenSource_Metrics_Package-checkpoint.ipynb  DaScient_Multidimensional_Visual_Ops_Package-checkpoint.ipynb
public-health-infra-analytics-kit/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  spec.md
public-health-infra-analytics-kit/docs/: architecture.md  cli.md  dashboard.md  governance.md  index.md  metrics.md  payloads.md  privacy.md  threat-model.md
public-health-infra-analytics-kit/examples/: README.md
public-health-infra-analytics-kit/notebooks/: 00_PHIAK_Tour.ipynb
tests/: test_hodgkin_huxley_dynamics.py  test_import.py  test_perfusion_stability.py  test_spike_sorting_accuracy.py
water-ops-interop-kit/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  spec.md
water-ops-interop-kit/.github/workflows/: ci.yml
water-ops-interop-kit/docs/: architecture.md  cli.md  dashboard.md  index.md  metrics.md  payload.md  plugins.md
water-ops-interop-kit/examples/: README.md
water-ops-interop-kit/examples/configs/: minimal.yml
water-ops-interop-kit/notebooks/: 00_WOIK_Tour.ipynb
water-ops-interop-kit/plugins/: README.md  __init__.py
water-ops-interop-kit/tests/: test_engine.py  test_metrics.py
water-ops-interop-kit/water_ops_interop_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
water-ops-interop-kit/webapp/: app.js  index.html  styles.css
water-ops-interop-kit/woik/: cli.py  report.py
water-ops-interop-kit/woik/core/: engine.py  errors.py  payloads.py  plugin_manager.py
water-ops-interop-kit/woik/metrics/: core.py
water-ops-interop-kit/woik/plugins/builtin/: leak_detector.py  pump_efficiency.py  quality_risk.py
(+49 files in other folders)
