[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dascient-suite"
version = "0.1.0"
description = "DaScient operational analytics suite for AI metrics, data center interop, and weather-to-energy planning."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DaScient"}]

[tool.setuptools.packages.find]
where = ["src"]
